--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -10,19 +10,6 @@
       placeholder="Username"
     />
   </div>
-  <div class="form-group-who mb-2">
-    <label>Who is your favourite user?</label>
-  </div>
-  <div class="form-group-who">
-    <select class="form-control mb-2" style="width: 200px;">
-      <option
-        *ngFor="let user of usersFromHomeComponent"
-        [value]="user.userName"
-      >
-        {{ user.userName }}
-      </option>
-    </select>
-  </div>
   <div class="form-group mb-2">
     <input
       type="password"
@@ -33,13 +20,13 @@
     />
   </div>
   <div class="form-group text-center">
-    <div class="mr-2"> 
-        <button class="btn btn-success mr-5" type="submit">Register</button>
+    <div class="mr-2">
+      <button class="btn btn-success mr-5" type="submit">Register</button>
     </div>
     <div class="ml-2">
-        <button class="btn btn-default" (click)="cancel()" type="submit"> Cancel</button>
+      <button class="btn btn-default" (click)="cancel()" type="submit">
+        Cancel
+      </button>
     </div>
-    
-     
   </div>
 </form>
