--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -1,3 +1,22 @@
-.dropdown-toggle, .dropdown-item {
+/* .dropdown-toggle, .dropdown-item {
     cursor: pointer;
+} */
+
+.dropdown {
+    position: relative;
+}
+
+.dropdown:hover .dropdown-toggle:hover .drop-menu{
+    opacity: 1;
+    visibility: visible;
+}
+
+.drop-menu{
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 100%;
+    background-color: #782c54 ;
+    opacity: 0;
+    visibility: visible;
 }
