--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -42,12 +42,12 @@
         style="margin-left: 50px;"
       >
         Welcome {{ user.username | titlecase }}
+        <div class="drop-menu mt-3" *dropdownMenu>
+          <a class="dropdown-item text-light" (click)="edit()">Edit Project</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item text-light" (click)="logout()">Logout</a>
+        </div>
       </a>
-      <div class="drop-menu mt-3" *dropdownMenu>
-        <a class="dropdown-item text-light">Edit Project</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item text-light" (click)="logout()">Logout</a>
-      </div>
     </div>
 
     <form
