--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -36,8 +36,9 @@
       *ngIf="accountService.currentUser$ | async as user"
       dropdown
     >
+      <img src="{{ user.photoUrl }}" alt="{{ user.username }}" />
       <a
-        class="dropdown-toggle text-light"
+        class="dropdown-toggle text-light ml-4"
         dropdownToggle
         style="margin-left: 50px;"
       >
