--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,24 +1,81 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
   <h2 class="text-center text-primary">Sign up</h2>
   <hr />
   <div class="form-group mb-2">
     <input
+      [class.is-invalid]="
+        registerForm.get('username').errors &&
+        registerForm.get('username').touched
+      "
       type="text"
       clas="form-control mb-2"
-      name="username"
-      [(ngModel)]="model.username"
+      formControlName="username"
       placeholder="Username"
     />
+    <div class="invalid-feedback">
+      Please enter a username
+    </div>
   </div>
+
   <div class="form-group mb-2">
     <input
+      [class.is-invalid]="
+        registerForm.get('password').errors &&
+        registerForm.get('password').touched
+      "
       type="password"
       clas="form-control"
-      name="password"
-      [(ngModel)]="model.password"
+      formControlName="password"
       placeholder="Password"
     />
+    <div
+      *ngIf="registerForm.get('password').hasError('required')"
+      class="invalid-feedback"
+    >
+      Please enter a password
+    </div>
+
+    <div
+      *ngIf="registerForm.get('password').hasError('minlength')"
+      class="invalid-feedback"
+    >
+      Password must be at least 4 characters
+    </div>
+
+    <div
+      *ngIf="registerForm.get('password').hasError('maxlength')"
+      class="invalid-feedback"
+    >
+      Password must be at most 8 characters
+    </div>
   </div>
+
+  <div class="form-group mb-2">
+    <input
+      [class.is-invalid]="
+        registerForm.get('confirmPassword').errors &&
+        registerForm.get('confirmPassword').touched
+      "
+      type="password"
+      clas="form-control"
+      formControlName="confirmPassword"
+      placeholder="Confirm Password"
+    />
+    <div
+      *ngIf="registerForm.get('confirmPassword').hasError('required')"
+      class="invalid-feedback"
+    >
+      Please enter a confirm password
+    </div>
+
+    <div
+      *ngIf="registerForm.get('confirmPassword').hasError('isMatching')"
+      class="invalid-feedback"
+    >
+      Comfirm password must match password
+    </div>
+  </div>
+
   <div class="form-group text-center">
     <div class="mr-2">
       <button class="btn btn-success mr-5" type="submit">Register</button>
@@ -30,3 +87,6 @@
     </div>
   </div>
 </form>
+
+<p>Form value: {{ registerForm.value | json }}</p>
+<p>Form value: {{ registerForm.status | json }}</p>
