--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,92 +1,88 @@
-<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
+<form
+  [formGroup]="registerForm"
+  (ngSubmit)="registerForm.valid && register()"
+  autocomplete="off"
+>
   <h2 class="text-center text-primary">Sign up</h2>
   <hr />
-  <div class="form-group mb-2">
-    <input
-      [class.is-invalid]="
-        registerForm.get('username').errors &&
-        registerForm.get('username').touched
-      "
-      type="text"
-      clas="form-control mb-2"
-      formControlName="username"
-      placeholder="Username"
-    />
-    <div class="invalid-feedback">
-      Please enter a username
+
+  <div class="mb-3">
+    <div class="i-am"><label style="margin-right: 10px;">I am a:</label></div>
+
+    <div class="check-box">
+      <label class="form-check-label" style="margin-right: 10px;">
+        <input
+          class="form-check-input"
+          type="radio"
+          value="male"
+          formControlName="gender"
+        />
+        Male
+      </label>
+    </div>
+    <div class="">
+      <label class="form-check-label" style="margin-right: 10px;">
+        <input
+          type="radio"
+          value="female"
+          formControlName="gender"
+          class="form-check-input mr-10"
+        />
+        Female
+      </label>
     </div>
   </div>
 
-  <div class="form-group mb-2">
-    <input
-      [class.is-invalid]="
-        registerForm.get('password').errors &&
-        registerForm.get('password').touched
-      "
-      type="password"
-      clas="form-control"
-      formControlName="password"
-      placeholder="Password"
-    />
-    <div
-      *ngIf="registerForm.get('password').hasError('required')"
-      class="invalid-feedback"
-    >
-      Please enter a password
-    </div>
+  <app-text-input
+    [formControl]="registerForm.controls['username']"
+    [label]="'Username'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="registerForm.controls['knownAs']"
+    [label]="'Known As'"
+  ></app-text-input>
+  <app-date-input
+    [formControl]="registerForm.controls['dateOfBirth']"
+    [label]="'Date Of Birth'"
+    [maxDate]="maxDate"
+  ></app-date-input>
+  <app-text-input
+    [formControl]="registerForm.controls['city']"
+    [label]="'City'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="registerForm.controls['country']"
+    [label]="'Country'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="registerForm.controls['password']"
+    [label]="'Password'"
+    [type]="'password'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="registerForm.controls['confirmPassword']"
+    [label]="'Confirm Password'"
+    [type]="'password'"
+  ></app-text-input>
 
-    <div
-      *ngIf="registerForm.get('password').hasError('minlength')"
-      class="invalid-feedback"
-    >
-      Password must be at least 4 characters
-    </div>
-
-    <div
-      *ngIf="registerForm.get('password').hasError('maxlength')"
-      class="invalid-feedback"
-    >
-      Password must be at most 8 characters
-    </div>
-  </div>
-
-  <div class="form-group mb-2">
-    <input
-      [class.is-invalid]="
-        registerForm.get('confirmPassword').errors &&
-        registerForm.get('confirmPassword').touched
-      "
-      type="password"
-      clas="form-control"
-      formControlName="confirmPassword"
-      placeholder="Confirm Password"
-    />
-    <div
-      *ngIf="registerForm.get('confirmPassword').hasError('required')"
-      class="invalid-feedback"
-    >
-      Please enter a confirm password
-    </div>
-
-    <div
-      *ngIf="registerForm.get('confirmPassword').hasError('isMatching')"
-      class="invalid-feedback"
-    >
-      Comfirm password must match password
-    </div>
+  <div class="row" *ngIf="validationErrors.length > 0">
+    <ul class="text-danger">
+      <li *ngFor="let error of validationErrors">
+        {{ error }}
+      </li>
+    </ul>
   </div>
 
   <div class="form-group text-center">
-    <div class="mr-2">
-      <button class="btn btn-success mr-5" type="submit">Register</button>
-    </div>
-    <div class="ml-2">
-      <button class="btn btn-default" (click)="cancel()" type="submit">
-        Cancel
-      </button>
-    </div>
+    <button
+      [disabled]="!registerForm.valid"
+      class="btn btn-success mr-2"
+      type="submit"
+    >
+      Register
+    </button>
+    <button class="btn btn-default mr-2" (click)="cancel()" type="button">
+      Cancel
+    </button>
   </div>
 </form>
-
-<p>Form value: {{ registerForm.value | json }}</p>
-<p>Form value: {{ registerForm.status | json }}</p>
